# dashboard-rhizosphere

./: .Rprofile  .gitignore  README.md  dockerfile  plotlydash_microbiome_dashboard.py  pyproject.toml  requirements.txt  rmarkdown_microbiome.Rmd  setup.R  setup.sh
quarto_dashboard/: parameters_ggsave.R  quarto-cleanup-script.py  quarto_dashboard.qmd
quarto_dashboard/_site/: index.html  quarto_dashboard.html  search.json
quarto_dashboard/_site/panels/paneldoc/: bar.html  d3Network.html  data.html  filter.html  heatmap.html  network.html  ordination.html  palette.html  provenance.html  richness.html  scatter.html  transform.html  tree.html
quarto_dashboard/_site/site_libs/bootstrap/: bootstrap.min.css
quarto_dashboard/panels/: panel_server_provenance.R  panel_ui_data.R
shiny_dashboard/: global.R  install.R  server.R  ui.R
shiny_dashboard/panels/: panel_server_data.R  panel_server_filter.R  panel_server_palette.R
shiny_dashboard/panels/paneldoc/: transform.md
