[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Dashboard Rhizosphere Project"
version = "0.1.0"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "tensorflow",
    "keras",
    "matplotlib",
    "seaborn",
    "xgboost",
    "lightgbm",
    "torch",
    "torchvision",
    "torchaudio"
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cu118"